force-app/main/default/objects/Activity/fields/HAM_Address__c.field-meta.xml
<CustomField>
    <fullName>HAM_Address__c</fullName>
    <description>Physical location of the stay (hotel, hostel, Airbnb, etc.). Can capture street, city, state, postal code, and country.</description>
    <inlineHelpText>Physical location of the stay (hotel, hostel, Airbnb, etc.). Can capture street, city, state, postal code, and country.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>