force-app/main/default/objects/Activity/fields/HAM_Campus_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>HAM_Campus_Stakeholders__c</fullName>
    <description>This field is used to highlight if any of the campus stakeholder were part of the meeting</description>
    <inlineHelpText>This field is used to highlight if any of the campus stakeholder were part of the meeting</inlineHelpText>
    <label>HAM Campus Stakeholders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>VP Faculty</fullName>
            </value>
            <value>
                <fullName>VP Finance</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>