force-app/main/default/objects/Activity/fields/HAM_Car_Ownership__c.field-meta.xml
<CustomField>
    <fullName>HAM_Car_Ownership__c</fullName>
    <description>Personal or Rented Car</description>
    <inlineHelpText>Personal or Rented Car</inlineHelpText>
    <label>Car Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>