force-app/main/default/objects/Activity/fields/HAM_Confirmation_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Confirmation_ID__c</fullName>
    <description>Booking confirmation number</description>
    <inlineHelpText>Booking confirmation number</inlineHelpText>
    <label>Confirmation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>