force-app/main/default/objects/Activity/fields/HAM_Constituent_Letter_Salutation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent_Letter_Salutation__c</fullName>
    <formula>HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.HAM_Letter_Salutation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Letter Salutation</label>
    <type>Text</type>
</CustomField>