force-app/main/default/objects/Activity/fields/HAM_Constituent_Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent_Preferred_Address__c</fullName>
    <formula>HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Address_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Preferred Address</label>
    <type>Text</type>
</CustomField>