force-app/main/default/objects/Activity/fields/HAM_Constituent_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent_Preferred_Email__c</fullName>
    <formula>HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Preferred Email</label>
    <type>Text</type>
</CustomField>