force-app/main/default/objects/Activity/fields/HAM_Constituent_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent_Preferred_Phone__c</fullName>
    <formula>HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.HAM_Formatted_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Preferred Phone</label>
    <type>Text</type>
</CustomField>