force-app/main/default/objects/Activity/fields/HAM_Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>HAM_Contact_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link the contact report back to the event after the meeting is completed and contact report is created.</description>
    <inlineHelpText>This field is used to link the contact report back to the event after the meeting is completed and contact report is created.</inlineHelpText>
    <label>HAM Contact Report</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>