force-app/main/default/objects/Activity/fields/HAM_Designations_and_Amounts__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designations_and_Amounts__c</fullName>
    <description>The designations and amounts associated with this acknowledgement.</description>
    <inlineHelpText>The designations and amounts associated with this acknowledgement.</inlineHelpText>
    <label>Designations and Amounts</label>
    <type>TextArea</type>
</CustomField>