force-app/main/default/objects/Activity/fields/HAM_Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>HAM_Destination_Airport__c</fullName>
    <description>Name of destination airport</description>
    <inlineHelpText>Name of destination airport</inlineHelpText>
    <label>Destination Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>