force-app/main/default/objects/Activity/fields/HAM_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date_Time__c</fullName>
    <description>End Date and Time of Event Stay/Travel/Meeting</description>
    <inlineHelpText>End Date and Time of Event Stay/Travel/Meeting</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>