force-app/main/default/objects/Activity/fields/HAM_Flight_Train_Number__c.field-meta.xml
<CustomField>
    <fullName>HAM_Flight_Train_Number__c</fullName>
    <description>Number of flight/train</description>
    <inlineHelpText>Number of flight/train</inlineHelpText>
    <label>Flight/Train Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>