force-app/main/default/objects/Activity/fields/HAM_Gift_Entry_Approved__c.field-meta.xml
<CustomField>
    <fullName>HAM_Gift_Entry_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Gift Entry Team reviewed and approved this task to go to PRMs for review?</description>
    <inlineHelpText>Has the Gift Entry Team reviewed and approved this task to go to PRMs for review?</inlineHelpText>
    <label>Gift Entry Approved?</label>
    <type>Checkbox</type>
</CustomField>