force-app/main/default/objects/Activity/fields/HAM_Hard_and_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hard_and_Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the credit record that initiated this task.</description>
    <inlineHelpText>Link to the credit record that initiated this task.</inlineHelpText>
    <label>Hard and Soft Credit</label>
    <referenceTo>ucinn_ascendv2__Hard_and_Soft_Credit__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Activities_Hard_Soft_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>