force-app/main/default/objects/Activity/fields/HAM_In_Person__c.field-meta.xml
<CustomField>
    <fullName>HAM_In_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the event with the Organization or Constituent was held in person.</description>
    <inlineHelpText>Check this field if the event with the Organization or Constituent was held in person.</inlineHelpText>
    <label>HAM In Person</label>
    <type>Checkbox</type>
</CustomField>