force-app/main/default/objects/Activity/fields/HAM_Meeting_cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>HAM_Meeting_cancellation_Reason__c</fullName>
    <description>Enter the reason why the meeting was cancelled this will help to report and circle back if needed.</description>
    <inlineHelpText>Enter the reason why the meeting was cancelled this will help to report and circle back if needed.</inlineHelpText>
    <label>HAM Meeting cancellation Reason</label>
    <type>TextArea</type>
</CustomField>