force-app/main/default/objects/Activity/fields/HAM_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Meeting_Link__c</fullName>
    <description>Stores the meeting link for an Event activity.</description>
    <inlineHelpText>The meeting link for an Event</inlineHelpText>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>