force-app/main/default/objects/Activity/fields/HAM_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Meeting_Status__c</fullName>
    <description>Please use this field to setup the meeting and make sure to update the status as an when the meeting is held, rescheduled or cancelled.</description>
    <inlineHelpText>1. Planned = A trip is being planned and you are contacting the person
2. Scheduled = Alumni has confirmed the availability and meeting is scheduled
3. Rescheduled = Alumni requested to rescheduled the meeting 
4. Completed = Meeting was completed and its time for contact report
5. Cancelled = Due to some reason one of the member cancelled the meeting (Reason will be mandatory)</inlineHelpText>
    <label>HAM Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Attempted unavailable</fullName>
            </value>
            <value>
                <fullName>Attempted unresponsive</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>