force-app/main/default/objects/Activity/fields/HAM_Meeting_Title__c.field-meta.xml
<CustomField>
    <fullName>HAM_Meeting_Title__c</fullName>
    <defaultValue>(&quot;Gift Officer Meeting&quot;)</defaultValue>
    <description>This is the name of the meeting. Eg: Donation 1 on 1; Engagement; quarterly meeting; reunion feedback</description>
    <inlineHelpText>This is the name of the meeting. Eg: Donation 1 on 1; Engagement; quarterly meeting; reunion feedback</inlineHelpText>
    <label>HAM Meeting Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>