force-app/main/default/objects/Activity/fields/HAM_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Meeting_Type__c</fullName>
    <description>Type of meeting</description>
    <inlineHelpText>Type of meeting</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>