force-app/main/default/objects/Activity/fields/HAM_Mode__c.field-meta.xml
<CustomField>
    <fullName>HAM_Mode__c</fullName>
    <description>Mode of transportation</description>
    <inlineHelpText>Mode of transportation</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>