force-app/main/default/objects/Activity/fields/HAM_Name_of_Creditee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Name_of_Creditee__c</fullName>
    <description>Name of Creditee on the originating credit record.</description>
    <formula>HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Name_of_Creditee_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of Creditee on the originating credit record.</inlineHelpText>
    <label>Name of Creditee</label>
    <type>Text</type>
</CustomField>