force-app/main/default/objects/Activity/fields/HAM_Presidential_Outreach_Complete__c.field-meta.xml
<CustomField>
    <fullName>HAM_Presidential_Outreach_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the president has completed the outreach (by any contact method).</description>
    <inlineHelpText>Indicates whether the president has completed the outreach (by any contact method).</inlineHelpText>
    <label>Presidential Outreach Complete</label>
    <type>Checkbox</type>
</CustomField>