force-app/main/default/objects/Activity/fields/HAM_PRM__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM__c</fullName>
    <formula>IF(ISBLANK(HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__c),
HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Account__r.ucinn_ascendv2__PRM__r.FirstName&amp;&quot; &quot;&amp; HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Account__r.ucinn_ascendv2__PRM__r.LastName,
HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__r.FirstName&amp;&quot; &quot;&amp;HAM_Hard_and_Soft_Credit__r.ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM</label>
    <type>Text</type>
</CustomField>