force-app/main/default/objects/Activity/fields/HAM_PRM_Reviewed_and_Approved__c.field-meta.xml
<CustomField>
    <fullName>HAM_PRM_Reviewed_and_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the PRM prepared and approved the presidential outreach notes and docs.</description>
    <inlineHelpText>Has the PRM prepared and approved the presidential outreach notes and docs.</inlineHelpText>
    <label>PRM Reviewed and Approved</label>
    <type>Checkbox</type>
</CustomField>