force-app/main/default/objects/Activity/fields/HAM_Prompt_Notes__c.field-meta.xml
<CustomField>
    <fullName>HAM_Prompt_Notes__c</fullName>
    <description>Admin notes for reference relating to the backend support of the task.</description>
    <inlineHelpText>Admin notes for reference relating to the backend support of the task.</inlineHelpText>
    <label>Prompt Admin Notes</label>
    <type>TextArea</type>
</CustomField>