force-app/main/default/objects/Activity/fields/HAM_Source_Airport__c.field-meta.xml
<CustomField>
    <fullName>HAM_Source_Airport__c</fullName>
    <description>Name of source airport</description>
    <inlineHelpText>Name of source airport</inlineHelpText>
    <label>Source Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>