force-app/main/default/objects/Activity/fields/HAM_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date_Time__c</fullName>
    <description>Start Date and Time of the Event Stay/Travel/Meeting</description>
    <inlineHelpText>Start Date and Time of the Event Stay/Travel/Meeting</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>