force-app/main/default/objects/Activity/fields/HAM_Stay_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Stay_Name__c</fullName>
    <description>Name of Hotel</description>
    <inlineHelpText>Name of Hotel</inlineHelpText>
    <label>Stay Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>