force-app/main/default/objects/Activity/fields/HAM_Submitted_to_VP__c.field-meta.xml
<CustomField>
    <fullName>HAM_Submitted_to_VP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the acknowledgment been submitted to the VP of Advancement for review?</description>
    <inlineHelpText>Has the acknowledgment been submitted to the VP of Advancement for review?</inlineHelpText>
    <label>Submitted to VP?</label>
    <type>Checkbox</type>
</CustomField>