force-app/main/default/objects/Activity/fields/HAM_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Task_Link__c</fullName>
    <description>Link to the task record in a new tab.</description>
    <formula>HYPERLINK(&quot;https://hamiltoncollege.lightning.force.com/&quot; &amp;  Id , &quot;Task Link&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the task record in a new tab.</inlineHelpText>
    <label>Task Link</label>
    <type>Text</type>
</CustomField>