force-app/main/default/objects/Activity/fields/HAM_Total_Gift_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Gift_Pledge_Amount__c</fullName>
    <description>The total amount of the gifts, pledges, bequest intention, and payments associated with this acknowledgement.</description>
    <inlineHelpText>The total amount of the gifts, pledges, bequest intention, and payments associated with this acknowledgement.</inlineHelpText>
    <label>Total Gift/Pledge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>