force-app/main/default/objects/Activity/fields/HAM_Trip_Details__c.field-meta.xml
<CustomField>
    <fullName>HAM_Trip_Details__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup on parent Trip Details Object</description>
    <label>Trip Details</label>
    <referenceTo>HAM_Trip_Details__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>