force-app/main/default/objects/Activity/fields/HAM_VP_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>HAM_VP_Acknowledgment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the vice president of Advancement has completed the outreach (by any contact method, most commonly written correspondence).</description>
    <inlineHelpText>Indicates whether the vice president of Advancement has completed the outreach (by any contact method, most commonly written correspondence).</inlineHelpText>
    <label>VP Acknowledgment Complete</label>
    <type>Checkbox</type>
</CustomField>