force-app/main/default/objects/Activity/fields/HAM_Work_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Work_Plan_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan Unit</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>